<resources>
    <string name="app_name">Education</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_science">Sciences</string>
    <string name="str_exam">Exam</string>
    <string name="str_setting">Settings</string>
    <string name="tv_setting">Settings</string>
    <string name="tv_language">English</string>
    <string name="tv_lang_title">Language:</string>
    <string name="tv_theme_title">Theme:</string>
    <string name="tv_theme">Dark Mode</string>
    <string name="tv_send_complaints">Send Complaints</string>
    <string name="day">Day</string>
    <string name="auto">Auto</string>
    <string name="night">Night</string>
    <string name="choose_language">Choose language</string>
    <string name="lang_uz">O\'zbekcha</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_en">English</string>
    <string name="tv_sciences">Sciences</string>
    <string name="my_profile">My profile</string>
    <string name="tv_name_surname">Name Surname</string>
    <string name="last_family_name">Last/Family Name:</string>
    <string name="tv_surname">Surname</string>
    <string name="first_name">FIRST NAME:</string>
    <string name="tv_name">Name</string>
    <string name="middle_name">MIDDLE NAME:</string>
    <string name="tv_middle_name">Middle name:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="tv_phone_title">Phone number</string>
    <string name="email">Email</string>
    <string name="region">Region:</string>
    <string name="district_city">district (city):</string>
    <string name="address">Address:</string>
    <string name="created_date">Created date:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tv_first_name">First name</string>
    <string name="tv_et_middle_name">Middle name</string>
    <string name="tv_date_of_birth">Date of birth</string>
    <string name="tv_phone_number">Phone number</string>
    <string name="tv_email">Email</string>
    <string name="tv_address">Address</string>
    <string name="str_about_app_info">Education is an online platform for the most effective and transparent management of school lessons. This is a user-friendly application that has many functions for learning topics, running tests, viewing tasks from the application, contacting the admin when an error is detected, and more. It is a great combination of simple user interface design and interesting features. It is well used by students, parents and teachers.</string>
    <string name="tv_about_the_app">About the app</string>
    <string name="tv_class5_math">5th grade math</string>
    <string name="tv_class6_math">6th grade math</string>
    <string name="tv_class7_math">7th grade math</string>
    <string name="tv_class7_geo">geometry grade 7</string>
    <string name="tv_class8_math">8th grade math</string>
    <string name="tv_class8_geo">geometry grade 8</string>
    <string name="tv_class9_math">9th grade math</string>
    <string name="tv_class9_geo">geometry grade 9</string>
    <string name="tv_finish_dialog">Are you sure you want to\n logout?</string>
    <string name="tv_no">No</string>
    <string name="tv_yes">Yes</string>
    <string name="tv_class5">5th grade</string>
    <string name="tv_class_6">6th grade</string>
    <string name="tv_class7">7th grade</string>
    <string name="tv_class8">8th grade</string>
    <string name="tv_class9">9th grade</string>
    <string name="tv_str_result">Your result</string>
    <string name="tv_accurate">precision</string>
    <string name="tv_right_answer_count">Number of correct answers</string>
    <string name="tv_question_count">Number of questions</string>
    <string name="tv_error_count">Wrong answers</string>
    <string name="tv_main_window">"Return to the main window"</string>
    <string name="tv_edit">Change</string>
    <string name="camera">\nCamera</string>
    <string name="gallery">\nGallery</string>
    <string name="add_photo">\nAdd Photo</string>
    <string name="how_does_it_look">\nHow does it look?</string>
    <string name="how_look_des">\nMake sure your face is centered and visible. This photo will help customers recognize you.</string>
    <string name="retake">\nAgain</string>
    <string name="ready">\nReady</string>
</resources>