<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--    main part-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        toolbar-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@drawable/round_ripple_effect"
                android:src="@drawable/ic_carbon_close" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/sfpro_display_semibold"
                android:text="@string/add_photo"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_250sdp"
            app:cardElevation="0dp">

            <com.fenchtose.nocropper.CropperView
                android:id="@+id/cropper_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#ff282828"
                app:nocropper__grid_color="#ff4081"
                app:nocropper__grid_opacity="0"
                app:nocropper__grid_thickness="0.8dp"
                app:nocropper__padding_color="#ff282828" />

        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_14sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/txt_display_medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_does_it_look"
            android:textColor="@color/black" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/txt_display_regular_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sfpro_display_regular"
            android:text="@string/how_look_des"
            android:textColor="@color/seattle_100"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_button"
                style="@style/secondary_main_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_weight="1"
                android:text="@string/save" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/retake_button"
                style="@style/main_button_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_weight="1"
                android:text="@string/retake" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>